Updated pop-over shadow, fixed the dropdown arrow color, aligned text and adjusted centering popovers in Mobile

--- a/components/popovers/popovers.less
+++ b/components/popovers/popovers.less
@@ -2,4 +2,80 @@
  * Popovers component theme overrides
  *------------------------------------------------------------------------------------------
  */
+// Opacity
+// TODO this is duplicate in the Bootstrap UI, but needed to make opacity work
+.opacity(@opacity) {
+    opacity: @opacity;
+    // IE8 filter
+    @opacity-ie: (@opacity * 100);
+    filter: ~"alpha(opacity=@{opacity-ie})";
+}
 
+.popover {
+    padding: 20px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    border: 1px solid #999999;
+    .popover-content {
+        padding: 0;
+        padding-top: 10px;
+        > .popover-content {
+            padding-top: 10px;
+        }
+    }
+
+    .popover-title {
+        margin: 0; // reset heading margin
+        padding: 0 0 10px 0;
+        font-size: ceil((@font-size-base * 1.14)); // ~16px
+        font-family: @font-family-serif;
+        font-weight: bold;
+        line-height: 18px;
+        border-bottom: 1px solid @dell-gray;
+        .close {
+            font-size: (@font-size-base * 1.4);
+            line-height: 1;
+            padding-left: 5px;
+            .opacity(.55);
+            &:hover,
+            &:focus {
+                color: @close-color;
+                text-decoration: none;
+                cursor: pointer;
+                .opacity(.8);
+            }
+        }
+    }
+
+    &.top > .arrow, {
+        border-top-color: @popover-arrow-outer-fallback-color; // IE8 fallback
+        border-top-color: #666666;
+    }
+
+    &.right > .arrow {
+        border-right-color: @popover-arrow-outer-fallback-color; // IE8 fallback
+        border-right-color: #666666;
+    }
+    &.bottom > .arrow {
+        border-bottom-color: @popover-arrow-outer-fallback-color; // IE8 fallback
+        border-bottom-color: #666666;
+    }
+    &.left > .arrow {
+        border-left-color: @popover-arrow-outer-fallback-color; // IE8 fallback
+        border-left-color: #666666;
+    }
+}
+
+
+//popovers for mobile
+@media only screen and (max-width: @screen-xs-max) {
+    .popover {
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+        max-width: @screen-xs-max;
+        top: 15% !important;
+        left: 5% !important;
+        right: 5% !important;
+        display: block;
+
+    }
+
+}
